--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -1,3 +1,118 @@
 .Errors {
   color: red;
+  padding: 0.5rem;
+  margin: 0;
+  text-decoration: none;
+  text-align: center;
+  font-size: .8rem;
+}
+
+.Container {
+  height: 100vh;
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  position: relative;
+}
+
+.Content {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10;
+  text-align: center;
+
+  background: rgba( 255, 255, 255, 0.3 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 8.5px );
+  -webkit-backdrop-filter: blur( 8.5px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+@media screen and (min-width: 900px) and (max-width: 1200px) {
+  .Content {
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .Content {
+    width: 30%;
+    margin-left: 35%;
+    margin-right: 35%;
+  }
+}
+
+.Title {
+  font-size: 3rem;
+  text-align: center;
+  padding: 7%
+}
+
+.Form {
+  padding-top: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.Form-title {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.Form-button {
+  margin: 1rem;
+  padding: .5rem;
+  width: 8rem;  
+
+  border: none;
+  border-radius: .5rem;
+  
+  font-size: medium;
+
+  cursor: pointer;
+  transition: box-shadow .1s ease-in-out;
+}
+
+.Form-button:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+
+.Form-button:focus {
+  background-color: rgba(238,174,202,.7); 
+  color: white;
+}
+
+.Input {
+  width: 100%;
+  height: 2rem;
+  border: none;
+  border-radius: .5rem;
+  transition: all .2s ease-in-out;
+}
+
+.Input:focus {
+  outline: rgba(148,187,233,1) solid;
+  transform: scale(1.05);
+}
+
+
+.Input-label {
+  display: block;
+  padding-bottom: .2rem;
+  text-align: left;
+}
+
+.Input-div {
+  padding: .5rem;
+}
+
+.Login {
+  width: 100%;
+  font-size: .8rem;
 }
