--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -89,8 +89,10 @@
 }
 
 .Input {
-  width: 100%;
+  width: 95%;
   height: 2rem;
+  padding-left: .5rem;
+  padding-right: .5rem;
   border: none;
   border-radius: .5rem;
   transition: all .2s ease-in-out;
