--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -141,20 +141,13 @@
 }
 
 .Separator {
-  width: 70%;
+  width: 65%;
   margin-left: auto;
   margin-right: auto;
+  
   margin-top: 1rem;
-  position: relative;
-  height: 2rem;
-}
+  margin-bottom: 2rem;
 
-.Separator-text {
-  position: absolute;
-  left: 50%;
-  top: -25%;
-  background-color: azure;
-  border-radius: 100%;
-  padding: .5rem;
-  transform: translate(-1rem, -25%);
+  height: 0;
+  border-top: 1px solid rgba( 255, 255, 255, 1 );
 }
