--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,9 +6,18 @@
   height: 100%;
 
   background-color: white;
-  border-left: 1px solid #ccc;
+  border-left: 1px solid white;
 
   transition: width 300ms ease;
+
+  background: rgba( 255, 255, 255, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 8px );
+  -webkit-backdrop-filter: blur( 8px );
+  border-radius: 10px 0 0 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+  z-index: 40;
 }
 
 .Nav-open {
@@ -39,10 +48,17 @@
 
 .Nav-bar-li {
   width: 100%;
+  transition: background-color .3s ease;
 }
 
 .Nav-bar-li:hover {
-  background-color: fuchsia;
+  background-color: rgb(238,174,202);
+  border-radius: 10px 0 0 10px;
+}
+
+.Nav-bar-li:focus {
+  background-color: rgb(238,174,202);
+  border-radius: 10px 0 0 10px;
 }
 
 .Nav-bar-link {
@@ -81,11 +97,26 @@
   width: 4rem;
   height: 4rem;
 
+  padding-top: .2rem;
+
   border-radius: 100%;
-  border: 2px solid #ccc;
+  border: 2px solid white;
   background-color: white;
 
   text-align: center;
 
   transition: rotate 300ms ease;
+
+  background: rgb(238,174,202);
+}
+
+.Nav-bar-icon {
+  width: 3rem;
+  height: 3rem;
+  fill: white;
+  transition: transform .3s ease;
+}
+
+.Nav-bar-icon-rotation {
+  transform: rotate( 180deg );
 }
