--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,13 +2,15 @@
   text-align: center;
 }
 
-.Main { 
+.Home-container { 
   height: 100vh;
-  
-  font-size: 2rem;
+
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
-h1 {
+.Home-title {
   margin: auto;
   height: 3.5rem;
+  padding: 5%;
 }
