--- a/src/pages/form/Form.css
+++ b/src/pages/form/Form.css
@@ -17,7 +17,7 @@
   text-align: center;
 }
 
-@media screen and (min-width: 900px) and (max-width: 1200px) {
+@media screen and (min-width: 600px) and (max-width: 1200px) {
   .Form-content {
     width: 50%;
     margin-left: 25%;
@@ -35,7 +35,7 @@
 
 .Form-title {
   font-size: 3rem;
-  padding-top: 3rem;
+  padding-top: 1.5rem;
   padding-bottom: 1rem;
 }
 
@@ -56,7 +56,7 @@
 }
 
 .Form-select {
-  width: 50%;
+  width: 100%;
   padding: .7rem;
 
   border: none;
@@ -80,10 +80,8 @@
 .Form-file-div {
   margin: auto;
   position: relative;
-  display: flex;
   
-  width: 50%;
-  height: 5rem;
+  height: 15rem;
 
   background-color: white;
   border-radius: .5rem;
@@ -103,14 +101,17 @@
 }
 
 .Form-image-img {
+  display: block;
+  margin: auto;
+  max-width: 100%;
   max-height: 100%;
-  max-width: 50%;
 }
 
-.Form-image-label {
-  font-size: 1rem;
-  word-wrap: break-word;
-  padding: .2rem;
+.Form-file-text {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .Form-button {
