--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -21,6 +21,7 @@
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
+  padding-top: 2%;
   text-align: center;
 
   background: rgba( 255, 255, 255, 0.3 );
@@ -31,7 +32,8 @@
   border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
-@media screen and (min-width: 900px) and (max-width: 1200px) {
+
+@media screen and (min-width: 600px) and (max-width: 1200px) {
   .Login-content {
     width: 50%;
     margin-left: 25%;
@@ -48,9 +50,11 @@
 }
 
 .Login-title {
-  font-size: 3rem;
+  font-size: 2.7rem;
   text-align: center;
   padding-top: 5%;
+  padding-bottom: 5%;
+  padding: 1rem;
 }
 
 .Login-form {
@@ -114,7 +118,7 @@
 }
 
 .Login-with-google {
-  width: 50%;
+  width: 75%;
   padding: .75rem;
 
   border: none;
